force-app/main/default/objects/OrderItem/fields/Equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Produits commandés</relationshipLabel>
    <relationshipName>Produits_command_s</relationshipName>
    <type>Lookup</type>
</CustomField>