force-app/main/default/objects/OrderItem/fields/Equipement_cree__c.field-meta.xml
<CustomField>
    <fullName>Equipement_cree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>La case est cochée automatiquement quand un équipment est créé sur le produit commandé</description>
    <label>Equipement créé</label>
    <type>Checkbox</type>
</CustomField>