force-app/main/default/objects/OrderItem/fields/Nbre_Equipement_restant_a_cr_er__c.field-meta.xml
<CustomField>
    <fullName>Nbre_Equipement_restant_a_cr_er__c</fullName>
    <formula>Quantity -  Nbre_Equipements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nbre Equipement restant a créer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>