force-app/main/default/objects/OrderItem/fields/Nbre_Equipements__c.field-meta.xml
<CustomField>
    <fullName>Nbre_Equipements__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nbre Equipements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>