force-app/main/default/objects/OrderItem/fields/PC_Numero_de_PFI__c.field-meta.xml
<CustomField>
    <fullName>PC_Numero_de_PFI__c</fullName>
    <formula>Order.ORD_ReferenceCommande__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de PFI</label>
    <type>Text</type>
</CustomField>